# ml-from-scratch

./: .coverage  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
examples/austin_weather_model/: README.md  austin_weather_model.pickle  austin_weather_model_trainer.py  austin_weather_predictor.py  noaa_austin_2000_present.csv
scalene_profiles/: profile.html  profile.json
src/deep_learning_from_scratch/: DNN.py  MLP.py
src/ml_from_scratch/: MLP.py
src/ml_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: deep_learning_test.py  for_scalene.py
