[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ml_from_scratch"
version = "0.10"
description = "A deep learning library using only pandas and numpy."
authors = ["Dhruva Mambapoor"]
readme = "README.md"
packages = [{include = "src/*"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.24.1"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
flake8 = "^6.0.0"
tox = "^4.1.1"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=deep_learning_from_scratch",
]
testpaths = [
    "tests"
]
pythonpath = "src"
