[metadata]
name = ml_from_scratch
description = A deep learning library using only pandas and numpy.
author = Dhruva Mambapoor

[options]
packages = 
    ml_from_scratch
install_requires =
    pandas >= 1.5.2
    numpy >= 1.24.1
    scipy >= 1.10.0
python_requires = >=3.10
package_dir = 
    =src
zip_safe = no